// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > tests/fixtures/basic.jsx 1`] = `
"import { defineComponent, createVNode } from 'vue';

/* @__PURE__ */ defineComponent({
  setup() {
    defineRender(createVNode(\\"div\\", null, null));
  }
});
"
`;

exports[`fixtures > tests/fixtures/basic.vue 1`] = `
"import { defineComponent, h } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"basic\\",
  setup(__props) {
    return () => h(\\"div\\");
  }
});

var basic = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { basic as default };
"
`;

exports[`fixtures > tests/fixtures/error1.vue 1`] = `"bad arguments: defineRender()"`;

exports[`fixtures > tests/fixtures/id.vue 1`] = `
"import { defineComponent, createVNode, createTextVNode } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"id\\",
  setup(__props) {
    const renderFn = () => createVNode(\\"div\\", null, [createTextVNode(\\"Hello\\")]);
    return renderFn;
  }
});

var id = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { id as default };
"
`;

exports[`fixtures > tests/fixtures/tsx.vue 1`] = `
"import { defineComponent, createVNode, createTextVNode } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"tsx\\",
  setup(__props) {
    return () => createVNode(\\"div\\", null, [createTextVNode(\\"Hello\\")]);
  }
});

var tsx = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { tsx as default };
"
`;

exports[`fixtures > tests/fixtures/with-return.js 1`] = `
";
() => {
  return () => {
  };
  defineRender(() => {
    console.log(\\"hello world\\");
  });
};
"
`;

exports[`fixtures > tests/fixtures/without-fn.vue 1`] = `
"import { defineComponent, createVNode, createTextVNode } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"without-fn\\",
  setup(__props) {
    return () => createVNode(\\"div\\", null, [createTextVNode(\\"Hello\\")]);
  }
});

var withoutFn = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { withoutFn as default };
"
`;
